# hospital-agv-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
docs/: RESEARCH.md  architecture.md
launch/: simulation.launch.py
scripts/: README_legacy.md
scripts/legacy/: livox_pattern.py  noisy_imu.py  noisy_lidar.py  noisy_odom.py
src/: noisy_imu.cpp  noisy_lidar.cpp  noisy_livox_mid360.cpp  noisy_livox_mid70.cpp  noisy_odom.cpp
urdf/: materials.xacro  tracer2.gazebo  tracer2.xacro
urdf/sensors/: camera.xacro  imu.xacro  lidar.xacro  livox_mid360.xacro  livox_mid70.xacro  odom.xacro
worlds/: empty.sdf  loyola.sdf  loyola_lite.sdf
